# puzzle

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  CODEMAP.md  PLAN.md  README.md  composer.json  eslint.config.js  firebreak.py  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vite.config.js
api/: .env.example  composer.json  phpstan.neon  phpunit.xml
book/: README.md  (+7 more)
pipeline/: .gitignore  GRADING.md  Makefile  README.md  pyproject.toml
pipeline/burnfront_pipeline/: __init__.py  cli.py  curator.py  emitter.py  engine.py  grader.py  measure.py  signer.py
pipeline/calibration/: README.md  ingest.py
pipeline/tests/: conftest.py  test_curator.py  test_emitter.py  test_engine_vectors.py  test_fixture_sample.py  test_grader.py  test_signer.py
pipeline/tests/fixtures/: dev-signing-key  dev-signing-key.pub  seeds-sample.json
pipeline/tests/fixtures/content-sample/v20260706-1/: calendar.json  calendar.json.sig  puzzles.csv
pipeline/tests/fixtures/content-sample/v20260706-1/packs/: academy-1.json  academy-1.json.sig
pipeline/tests/fixtures/content-sample/v20260706-1/puzzles/: bf1-5x5-000001.json  bf1-5x5-000002.json  bf1-5x5-000003.json  bf1-5x5-000004.json  bf1-5x5-000005.json  bf1-5x5-000006.json  bf1-5x5-000007.json  bf1-5x5-000008.json  bf1-5x5-000009.json  bf1-5x5-000010.json  bf1-5x5-000011.json  bf1-5x5-000012.json  bf1-6x6-000001.json  bf1-6x6-000002.json  bf1-6x6-000003.json  bf1-6x6-000004.json  bf1-6x6-000005.json  bf1-7x7-000001.json  bf1-7x7-000002.json  bf1-7x7-000003.json  bf1-8x8-000001.json
(+500 files in other folders)
